<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:padding="20dp">

    <EditText
        android:id="@+id/skillnameedit"
        android:hint="@string/skillnamedefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.02">
        <TextView
            android:id="@+id/yearofpracticeedit"
            android:hint="@string/yearofpracticedefault"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical" />
        <Button
            android:onClick="datePick"
            android:background="@android:drawable/ic_menu_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/descriptionedit"
        android:hint="@string/descriptiondefault"
        android:inputType="textMultiLine"
        android:lines="15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:gravity="fill_horizontal|top|start" />
    <Button
        android:id="@+id/createskill"
        android:text="@string/donebutton"
        android:onClick="doneSkillEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>